--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>   
                 </div>
                 <div class="skills-task-front"
-                data-aos="fade-botton"
+                data-aos="fade-left"
                 data-aos-offset="400"
                 data-aos-duration="700"
                 data-aos-easing="ease-in-sine" >
