--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                </a>
                <a href="#about" class="house">
                 <i class="fa-solid fa-user"></i>
-               <p> Obaut me </p>
+               <p> Me </p>
                </a>
             <a href="#skills" class="house">
                 <i class="fa-solid fa-bell"></i>
-                <p>My skills</p>
+                <p>Skills</p>
             </a>
             <a href="#portfolio" class="house">
                 <i class="fa-solid fa-headphones"></i>
@@ -148,11 +148,7 @@
                 </p>
 
             <div class="skills-task">
-                <div  class="skills-task-front"
-                data-aos="fade-right"
-                data-aos-offset="400"
-                data-aos-duration="700"
-                data-aos-easing="ease-in-sine" >
+                <div  class="skills-task-front">
                     <p class="skills-task-front-sub">
                         Front-ent developer
                     </p>
@@ -205,11 +201,7 @@
                         </div>
                     </div>   
                 </div>
-                <div class="skills-task-front"
-                data-aos="fade-left"
-                data-aos-offset="400"
-                data-aos-duration="700"
-                data-aos-easing="ease-in-sine" >
+                <div class="skills-task-front" >
                     <p class="skills-task-front-sub">
                         Font-ent developer
                     </p>
