--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                 <i class="fa-solid fa-headphones"></i>
                 <p>Contact</p>
             </a>
-
+            <button class="header-button">
+                <i class="fa-solid fa-xmark"></i>
+               </button>
            </div>
        </div>
-       <button class="header-button">
+       <!-- <button class="header-button">
         <i class="fa-solid fa-xmark"></i>
-       </button>
+       </button> -->
   </div> 
   <div class="div">
     
@@ -201,7 +203,7 @@
                         </div>
                     </div>   
                 </div>
-                <div class="skills-task-front" >
+                <div class="skills-task-front" id="skills-task-front">
                     <p class="skills-task-front-sub">
                         Font-ent developer
                     </p>
