--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="./sass/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="./aos/aos.css"/>
 </head>
 <body>
     <!-- header -->
@@ -96,13 +95,7 @@
         <p class="about-text">
             My introduction 
         </p>
-        <div class="about-main"
-        data-aos="fade-zoom-in"
-        data-aos-easing="ease-in-back"
-        data-aos-offset="0"
-        data-aos-duration="500"
-        data-aos-delay="0"
-        >
+        <div class="about-main">
             <div class="about-main-img">
                 <img width="400px" src="./img/0a87c07a-20e0-48c2-991b-02f6b58020d1.jpg" alt="">
             </div>
