--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             </button>
           </div>
         </div>
-        <div class="contact-massage">
+        <!-- <div class="contact-massage">
           <h1>Write me your project</h1>
           <div class="contact-massage-div">
             <div class="contact-massage-div-main">
@@ -367,7 +367,7 @@
               <input type="name" class="focus" />
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- Contact -->
