--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./sass/style.css" />
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -80,7 +81,7 @@
             </p>
           </div>
           <div class="home-main-left">
-            <img width="300px" src="./img/img.jpg" />
+            <img width="300px" src="./img/homeImage.jpg" />
           </div>
         </div>
         <!-- <div class="home-scroll">
@@ -89,7 +90,28 @@
         </div> -->
       </div>
       <!-- //home  -->
+ <!-- Skills -->
+ <div class="skills" id="skills">
+  <h1>My skills</h1>
+  <p>My technikal level</p>
+  <div class="skills_subject">
+      <div class="skills_">
+          <div class="second_html">
+            <div class="html_table">
+              <img src="./img/HTML5_Badge_512.png" width="100%" />
+            </div>
+          </div>
+      </div>
+      <div class="skills_line">
+          <div class="line_roud">
 
+          </div>
+      </div>
+  </div>
+  
+   
+</div>
+<!-- Skills -->
       <!-- About me  -->
       <div class="about" id="about">
         <h1 class="about-sub">About me</h1>
@@ -134,117 +156,7 @@
       </div>
       <!-- About me -->
 
-      <!-- Skills -->
-      <div class="skills" id="skills">
-        <h1>My skills</h1>
-        <p>My technikal level</p>
-
-        <div class="skills-task">
-          <div class="skills-task-front">
-            <p class="skills-task-front-sub">Front-ent developer</p>
-            <div class="skills-task-front-page">
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>HTML</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>CSS</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-            </div>
-            <div class="skills-task-front-page">
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>Java Script</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>React</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-            </div>
-            <div class="skills-task-front-page">
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>Redux</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>TypeScript</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-            </div>
-          </div>
-          <div class="skills-task-front" id="skills-task-front">
-            <p class="skills-task-front-sub">Font-ent developer</p>
-            <div class="skills-task-front-page">
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>SASS</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>Tailwind</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-            </div>
-            <div class="skills-task-front-page">
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>Bootstrap</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>Git</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-            </div>
-            <div class="skills-task-front-page">
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>Git-Hub</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-              <div class="skills-task-front-page-div">
-                <div class="skills-task-front-page-div-main">
-                  <i class="fa-solid fa-square-check"></i>
-                  <p>TypeScript</p>
-                </div>
-                <p class="basic">Basic</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Skills -->
+     
       <!-- portfoio -->
       <div class="portfolio" id="portfolio">
         <h1>Portfolio</h1>
