--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
               <div class="home-main-div-page-i">
               <i class="fa-brands fa-instagram"></i> <br />
               </div>
+              <div class="home-main-div-page-i">
+                <i class="fa-brands fa-telegram"></i> <br />
+                </div>
           </div>
             
           </div>
