--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
         <div class="home-main">
           <div class="home-main-div">
             <div class="home-main-div-page">
-              <div class="home-main-div-page-i">
+              <a href="" class="home-main-div-page-i">
                 <i class="fa-solid fa-envelope"></i> <br />
-              </div>
-              <div class="home-main-div-page-i">
+              </a>
+              <a href="https://github.com/Janybek02" class="home-main-div-page-i">
                 <i class="fa-brands fa-github"></i><br />
-              </div>
-              <div class="home-main-div-page-i">
+              </a>
+              <a href="https://www.instagram.com/orzbkv0/" class="home-main-div-page-i">
                 <i class="fa-brands fa-instagram"></i> <br />
-              </div>
-              <div class="home-main-div-page-i">
+              </a>
+              <a href="" class="home-main-div-page-i">
                 <i class="fa-brands fa-telegram"></i> <br />
-              </div>
+              </a>
             </div>
           </div>
 
@@ -221,57 +221,30 @@
           <div class="">
             <div class="portfolio-main-page">
               <div class="portfolio-main-page-div mob" value="Web all">
-                <img src="./img/82a9a52653b471ca9a9460f5f1b52856.jpg" alt="" />
+                <img src="./img/teplo.png" alt="" />
                 <div class="portfolio-main-page-div-true">
-                  <p class="p">Web desing</p>
-                  <button>
+                  <p class="p">Web site</p>
+                  <a href="">
                     Click me <i class="fa-solid fa-arrow-right"></i>
-                  </button>
+                  </a>
                 </div>
               </div>
               <div class="portfolio-main-page-div web" value="mob all">
-                <img src="./img/82a9a52653b471ca9a9460f5f1b52856.jpg" alt="" />
+                <img src="./img/card.png" alt="" />
                 <div class="portfolio-main-page-div-true">
-                  <p class="p">Web desing</p>
-                  <button>
+                  <p class="p">Web site</p>
+                  <a href="https://store-add-card.vercel.app/">
                     Click me <i class="fa-solid fa-arrow-right"></i>
-                  </button>
+                  </a>
                 </div>
               </div>
               <div class="portfolio-main-page-div mob" value="mob all">
-                <img src="./img/82a9a52653b471ca9a9460f5f1b52856.jpg" alt="" />
+                <img src="./img/pokemon.png" alt="" />
                 <div class="portfolio-main-page-div-true">
-                  <p class="p">Web desing</p>
-                  <button>
+                  <p class="p">Web site</p>
+                  <a href="https://janybek02.github.io/Js-new-Pokemon/">
                     Click me <i class="fa-solid fa-arrow-right"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="portfolio-main-page-div mob" value="mob all">
-                <img src="./img/82a9a52653b471ca9a9460f5f1b52856.jpg" alt="" />
-                <div class="portfolio-main-page-div-true">
-                  <p class="p">Web desing</p>
-                  <button>
-                    Click me <i class="fa-solid fa-arrow-right"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="portfolio-main-page-div mob" value="Web all">
-                <img src="./img/82a9a52653b471ca9a9460f5f1b52856.jpg" alt="" />
-                <div class="portfolio-main-page-div-true">
-                  <p class="p">Web desing</p>
-                  <button>
-                    Click me <i class="fa-solid fa-arrow-right"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="portfolio-main-page-div web" value="Web all">
-                <img src="./img/82a9a52653b471ca9a9460f5f1b52856.jpg" alt="" />
-                <div class="portfolio-main-page-div-true">
-                  <p class="p">Web desing</p>
-                  <button>
-                    Click me <i class="fa-solid fa-arrow-right"></i>
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
