--- a/index.html
+++ b/index.html
@@ -55,58 +55,63 @@
       <!-- header -->
 
       <!-- //home  -->
-      <div class="home" id="house">
-        <div class="home-main">
-          <div class="home-main-div">
-            <div class="home-main-div-page">
-              <a href="" class="home-main-div-page-i">
-                <i class="fa-solid fa-envelope"></i> <br />
-              </a>
-              <a
-                href="https://github.com/Janybek02"
-                class="home-main-div-page-i"
-              >
-                <i class="fa-brands fa-github"></i><br />
-              </a>
-              <a
-                href="https://www.instagram.com/orzbkv0/"
-                class="home-main-div-page-i"
-              >
-                <i class="fa-brands fa-instagram"></i> <br />
-              </a>
-              <a href="" class="home-main-div-page-i">
-                <i class="fa-brands fa-telegram"></i> <br />
-              </a>
-            </div>
-          </div>
+       <div class="h">
 
-          <div class="home-main-center">
-            <div class="home-main-center-page">
-              <h1>Janybek Orozbekov</h1>
-              <h2 class="h2">I am front-ent developer</h2>
-              <div class="home-main-center-page-div">
-                <div class="home-main-center-page-div-div"></div>
-                <p class="div-p">My name is Janybek <br /></p>
+        <div class="home" id="house">
+      
+          <div class="home-main">
+            <div class="home-main-div">
+              <div class="home-main-div-page">
+                <a href="" class="home-main-div-page-i">
+                  <i class="fa-solid fa-envelope"></i> <br />
+                </a>
+                <a
+                  href="https://github.com/Janybek02"
+                  class="home-main-div-page-i"
+                >
+                  <i class="fa-brands fa-github"></i><br />
+                </a>
+                <a
+                  href="https://www.instagram.com/orzbkv0/"
+                  class="home-main-div-page-i"
+                >
+                  <i class="fa-brands fa-instagram"></i> <br />
+                </a>
+                <a href="" class="home-main-div-page-i">
+                  <i class="fa-brands fa-telegram"></i> <br />
+                </a>
               </div>
-
-              <p class="p">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Curabitur commodo lorem elit, id imperdiet ex mollis sit amet.
-                Nullam a mi non ex fringilla ullamcorper at eu metus
-              </p>
+            </div>
+  
+            <div class="home-main-center">
+              <div class="home-main-center-page">
+                <h1>Janybek Orozbekov</h1>
+                <h2 class="h2">I am front-ent developer</h2>
+                <div class="home-main-center-page-div">
+                  <div class="home-main-center-page-div-div"></div>
+                  <p class="div-p">My name is Janybek <br /></p>
+                </div>
+  
+                <p class="p">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur commodo lorem elit, id imperdiet ex mollis sit amet.
+                  Nullam a mi non ex fringilla ullamcorper at eu metus
+                </p>
+              </div>
+            </div>
+  
+            <div class="home-main-left">
+              <img width="300px" src="./img/homeImage.jpg" />
             </div>
           </div>
-
-          <div class="home-main-left">
-            <img width="300px" src="./img/homeImage.jpg" />
-          </div>
+          <div class="home-main-low"></div>
+          <!-- <div class="home-scroll">
+              <p>Croll down</p>
+              <a href="#contact" class="fa-sharp fa-solid fa-arrow-down"></a>
+          </div> -->
         </div>
-        <div class="home-main-low"></div>
-        <!-- <div class="home-scroll">
-            <p>Croll down</p>
-            <a href="#contact" class="fa-sharp fa-solid fa-arrow-down"></a>
-        </div> -->
-      </div>
+       </div>
+     
       <!-- //home  -->
       <!-- Skills -->
       <div class="skills" id="skills">
