--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="about-main-img">
             <img
               width="400px"
-              src="./img/0a87c07a-20e0-48c2-991b-02f6b58020d1.jpg"
+              src="./img/IMG_1815.jpg"
               alt=""
             />
           </div>
