--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
                   <div class="home-main-center-page-div-div"></div>
                   <p class="div-p">My name is Janybek <br /></p>
                 </div>
-  
                 <p class="p">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Curabitur commodo lorem elit, id imperdiet ex mollis sit amet.
-                  Nullam a mi non ex fringilla ullamcorper at eu metus
+                 Hi my name is Janybek i am 23 years old, i am front-ent developer my hobbies coding, play footboll and 
+                 learning something, right now i am a junior i will achiave my goals and dreams for this am trying every day be beter then yearstaday
                 </p>
               </div>
             </div>
@@ -140,9 +138,17 @@
               </div>
               <p class="text-html">Redux/Toolkit</p>
             </div>
+            <div class="skills_subject-page-table">
+              <div class="table-html">
+                <img src="./img/HTML5_Badge_512.png" width="60%" />
+              </div>
+              <p class="text-html">HTML</p>
+            </div>
           </div>
           <div class="skills_subject-line">
             <div class="skills_subject-line-roud">
+              <div class="line"></div>
+              <div class="round"></div>
               <div class="line"></div>
               <div class="round"></div>
               <div class="line"></div>
