--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
             </div>
             <div class="skills_subject-page-table">
               <div class="table-html">
-                <img src="./img/HTML5_Badge_512.png" width="60%" />
+                <img class="image" src="./img/java.png"  />
               </div>
-              <p class="text-html">HTML</p>
+              <p class="text-html">Java</p>
             </div>
           </div>
           <div class="skills_subject-line">
